--- a/documentation/metadata_mapping_table.html
+++ b/documentation/metadata_mapping_table.html
@@ -172,7 +172,7 @@
             <tr style="height: 20px">
                 <td class="s1" dir="ltr">Description [1]</td>
                 <td class="s2" dir="ltr">Description from the GitHub About fields</td>
-                <td class="s2" dir="ltr">Description that from the release.</td>
+                <td class="s2" dir="ltr">Release description</td>
                 <td class="s3" dir="ltr">x</td>
                 <td class="s2" dir="ltr">abstract</td>
                 <td class="s2" dir="ltr">description</td>
