--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@ permalink: /
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="refresh" content="0; url={{ "/documentation/" | relative_url }}">
+    <meta http-equiv="refresh" content="0;url='/documentation/'">
 </head>
+
 <body>
-    <p>If you are not redirected, <a href="{{ "/documentation/" | relative_url }}">click here</a>.</p>
+    <p>If you are not redirected, <a href="/documentation/">click here</a>.</p>
 </body>
+
 </html>
