fix broken link

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ permalink: /
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url='/documentation/'">
+    <meta http-equiv="refresh" content="0;url='/zenodo-github-integration/documentation/'">
 </head>
 
 <body>
-    <p>If you are not redirected, <a href="/documentation/">click here</a>.</p>
+    <p>If you are not redirected, <a href="/zenodo-github-integration/documentation/">click here</a>.</p>
 </body>
 
 </html>
