--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@ permalink: /
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url='/zenodo-github-integration/documentation/'">
+    <meta http-equiv="refresh" content="0;url='https://rue-a.github.io/zenodo-github-integration/documentation/'">
 </head>
 
 <body>
-    <p>If you are not redirected, <a href="/zenodo-github-integration/documentation/">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://rue-a.github.io/zenodo-github-integration/documentation/">click
+            here</a>.</p>
 </body>
 
 </html>
