fix broken links

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ permalink: /
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url='https://rue-a.github.io/zenodo-github-integration/documentation/'">
+    <meta http-equiv="refresh" content="0;url={{ '/documentation/' | relative_url }}">
 </head>
 
 <body>
-    <p>If you are not redirected, <a href="https://rue-a.github.io/zenodo-github-integration/documentation/">click
+    <p>If you are not redirected, <a href="{{ '/documentation/' | relative_url }}">click
             here</a>.</p>
 </body>
 
